Fix border overlap

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #DDDDDD;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,14 +28,15 @@ body {
 
 .board {
   display: grid;
-  grid-template-columns: repeat(10, 10%);
-  grid-template-rows: repeat(10, 10%);
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
   height: 300px;
   width: 300px;
-  border: 2px solid black;
+  border: 1px solid black;
 }
 
 .cell {
+  overflow: hidden;
   width: 100%;
   height: 100%;
   border: 1px solid black;
